# linux

./: .gitignore  .gitmodules  MSG_Q.c  msgreceive  msgreceive.c  msgsend.c  mutex.c  open-01.c  pipe01.c  read01.c  sem.c  sem2.c  t1.c  thread1.c
msg/: a.out  client  client_q.c  msg.c  msg_1.c  read  readq.c  server  server_q.c  write  writeq.c
net/: a.out  test_epoll.cpp
pipe/: a.out  pipe1.c  pipe2.c  pipe3.c
posix/: 01mq_open  01mq_open.c  01shm_open.c  02mq_unlink  02mq_unlink.c  02shm_unlink.c  03mq_getattr  03mq_getattr.c  03shm_write.c  04mq_send  04mq_send.c  04shm_read.c  05mq_recv  05mq_recv.c  06mq_notify  06mq_notify.c  Makefile
read-book/: a.c  a.out  ab  b.c  record_for_books.drawio  test.log.md  test1.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c  test7_1.c  test8.c  test8.s  test_mallo.c
read-book/test_dynamic_link/: CMakeLists.txt  head2.c  hello.cpp  main.cpp  test2.cpp
semaphore/: a.out  client  client_s.c  sem.c  sem_.c  sever  sever_s.c
shm/: a.out  client  client_1.c  note  server  server_1.c  shm.c  shm_1.c  shm_2.c  shm_3.c
signal/: a.out  alarm.c  mykill  mykill.c  pause.c  raise1.c  raise2.c  signal.c  signal2.c  test  test.c
socket/: client  client.c  echocli.cpp  echocli_line.cpp  echocli_select.cpp  echoscli_plus.cpp  echoser2.cpp  echoser_select.cpp  echoserver.cpp  echosrv_line.cpp  echosrv_plus.cpp  p2pcli.cpp  p2psrv.cpp  pollsrv.cpp  server  server.c
unix/: a.out  basic  basic.c  file  my_rw.c  tes.cpp  test.py  test_file1_cp  tmp.out  u_t4.c  u_t5.c  u_t6.c  u_t7.c  u_t8.c  u_t9.c  unix_t3.c  unix_test1.c  (+6 more)
(+22 files in other folders)
